Closed
Bug 1275039
Opened 9 years ago
Closed 9 years ago
[e10s] Block e10s on Windows XP
Categories
(Firefox :: General, defect)
Tracking
()
VERIFIED
FIXED
Firefox 49
People
(Reporter: Felipe, Assigned: Felipe)
References
Details
Attachments
(1 file)
|
58 bytes,
text/x-review-board-request
|
jimm
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details |
The crash rates on WinXP e10s are not yet on par with non-e10s. The theory is that it's due to more complicated graphics/hw-accel support on WinXP.
Until the crash criteria is met, we should not activate e10s for WinXP users.
| Assignee | ||
Comment 1•9 years ago
|
||
Blassey, is this block meant for:
- all channels
- beta/release only
- release only
?
Flags: needinfo?(blassey.bugs)
| Assignee | ||
Comment 2•9 years ago
|
||
I also would like to point out that there is already a block for hw-accelerated WinXP. I imagine I can remove that check since this one is meant to supersede it
Comment 3•9 years ago
|
||
release only. I presume we'll eventually want to enable e10s on XP so we should keep testing it in pre-release channels
Flags: needinfo?(blassey.bugs)
| Assignee | ||
Comment 4•9 years ago
|
||
There's some reorganization of the code in aboutSupport to support displaying Windows XP as a string without needing to be localized, as this will require an uplift to Aurora.
Review commit: https://reviewboard.mozilla.org/r/54690/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/54690/
Attachment #8755616 -
Flags: review?(jmathies)
Updated•9 years ago
|
Comment 5•9 years ago
|
||
Comment on attachment 8755616 [details]
MozReview Request: Bug 1275039 - Block e10s from being activated for release users on Windows XP. r=jimm
https://reviewboard.mozilla.org/r/54690/#review51774
Attachment #8755616 -
Flags: review?(jmathies) → review+
Comment 7•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox49:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 49
| Assignee | ||
Comment 8•9 years ago
|
||
Comment on attachment 8755616 [details]
MozReview Request: Bug 1275039 - Block e10s from being activated for release users on Windows XP. r=jimm
Approval Request Comment
[Feature/regressing bug #]: blocks e10s on WindowsXP, only on the release channel
[User impact if declined]: e10s is crashier on WinXP and the plan for the initial rollout is to exclude WinXP until crash rates are on par with non-e10s
[Describe test coverage new/current, TreeHerder]: landed in central
[Risks and why]: just limited to activating/not activating e10s on Windows XP
[String/UUID change made/needed]: the patch has an unlocalized string "Windows XP" to be displayed in about:support in case e10s is blocked.
Attachment #8755616 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
status-firefox48:
--- → affected
Comment 9•9 years ago
|
||
Comment on attachment 8755616 [details]
MozReview Request: Bug 1275039 - Block e10s from being activated for release users on Windows XP. r=jimm
Sure, let's do it!
Attachment #8755616 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 10•9 years ago
|
||
| bugherder uplift | ||
Comment 11•9 years ago
|
||
I tested this fix on Windows XP x64 with Firefox Developer Edition 48.0a2(2016-05-31) and the "Enable multi-process Firefox Developer Edition" checkbox is inactive and can't be activated, like expected. I also try to activate e10s from about:config but with the same result.
I talk with Ryan and he told me to do try to change the channel-pref.js from aurora to release, everything works as expected, in about:config the app.update.channel is set to release (not in bold), and multi-process remains disabled.
NOTE: I found a new issue.
STR:
1. Start Aurora with new profile
2. Go to Options
AR: After 1 sec the "Always check Firefox Developer Edition is your default browser" checkbox becomes inactive (grayed out) but the check mark is present. If I do the changes described above the result is the same, the checkbox is grayed out.
ER: Only the "Enable multi-process Firefox Developer Edition" checkbox should be grayed out but not the "Always check Firefox Developer Edition is your default browser" checkbox.
Should I file a new bug?
Flags: needinfo?(felipc)
| Assignee | ||
Comment 12•9 years ago
|
||
Hi Ovidiu,
yeah, please file a new bug for that. I believe it's unrelated to the e10s code.
Flags: needinfo?(felipc)
Comment 13•9 years ago
|
||
This is the bug that I filed for issue described in comment 11.
https://bugzilla.mozilla.org/show_bug.cgi?id=1277459
Comment 14•9 years ago
|
||
Tested on Win XP Firefox Developer Edition 49.0a2 (2016-06-02) with the following steps:
1. Start Firefox
2. Go to Options -> Advanced -> uncheck the "Use hardware acceleration when available"
3. Restart the browser
4. Go to Option -> General -> verify if the "Enable multi-process Firefox Developer Edition" checkbox is checked
5. Go into channel-pref.js and change the pref to "release"
6. Restart the browser
7. Go to Option -> General -> verify if the "Enable multi-process Firefox Developer Edition" checkbox is unchecked and grayed out.
These are the steps that I followed to test this issue and everything go as expected. I will mark this as Verified Fixed.
Status: RESOLVED → VERIFIED
Updated•9 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•