Bug 1275039 - Block e10s from being activated for release users on Windows XP. r=jimm, a=sledru

There's some reorganization of the code in aboutSupport to support displaying Windows XP as a string without needing to be localized, as this will require an uplift to Aurora.

MozReview-Commit-ID: IqLjEIKq0VI